<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Collector</string>
    <string name="action_settings">Settings</string>
    <string name="action_tag">Tag</string>
    <string name="action_map">Map</string>
    <string name="action_stage">Stage</string>
    <string name="service_name__collector">Collector Service</string>
    <string name="service_name__uploader">Uploader Service</string>
    <string name="service_name__externalizer">Externalizer Service</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_stage">Stage</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_viewer">Viewer</string>
    <string name="intent_sport">Sport</string>
    <string name="description_sport">Ausgewogene Strecken stehen hier im Vordergrund, die auch einiges an Kraft erfordern. Schnelles, möglichst Störungsfreies Radeln ist hier wichtig und Höhenunterschiede sind von Vorteil.</string>
    <string name="intent_leisure">Freizeit</string>
    <string name="description_leisure">Eine Radtour die hauptsächlich auf Entspannung ausgelegt ist. Meist an Flussufern entlang oder durch Parks. Hier steht die schöne Landschaft im Vordergrund.</string>
    <string name="intent_everyday">Alltag</string>
    <string name="description_everyday">Ob nun der normale Weg zum Supermarkt, zur Arbeit oder zur Uni. Alles was im Alltag an Strecke zurückgelegt werden muss, fällt hierrunter. Kurze und leichte Strecken sind hier natürlich praktisch.</string>
    <string name="intent_unspecified">None</string>
    <string name="settings_title">Einstellungen</string>
    <string name="settings_mail_title">Email</string>
    <string name="settings_pass_title">Passwort</string>
    <string name="settings_intention_title">Standart-Intention</string>
    <string name="settings_save">Speichern</string>
    <string name="main_start">Start</string>
    <string name="map_stop">Stop</string>
    <string name="rating_total_distance">Distanz</string>
    <string name="rating_max_speed">Maximale Geschwindigkeit</string>
    <string name="rating_time">Gesamtzeit</string>
    <string name="rating_avg_speed">Durchschnittliche Geschwindigkeit</string>
    <string name="rating_submit">Absenden</string>    <string name="fasttag_topLeftValue">Bremsen</string>
    <string name="fasttag_topRightValue">Bodenevent einzeln</string>
    <string name="fasttag_bottomLeftValue">Bodenevent dauerhaft</string>
    <string name="fasttag_bottomRightValue">Ausweichmanöver</string>

</resources>