<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/settings_title"
        android:textSize="18sp" />
    
<View
    android:id="@+id/settings_login_pane"
    android:layout_width="wrap_content"
    android:layout_height="180dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_below="@id/settings_title"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:background="#eaeaea" />

<TextView
    android:id="@+id/settings_mail_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@id/settings_login_pane"
    android:layout_alignTop="@id/settings_login_pane"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:text="@string/settings_mail_title"
    android:textAppearance="?android:attr/textAppearanceSmall" />

<EditText
    android:id="@+id/settings_mail_value"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/settings_login_pane"
    android:layout_alignRight="@id/settings_login_pane"
    android:layout_below="@id/settings_mail_title"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:ems="10"
    android:inputType="textPersonName" >

    <requestFocus />
</EditText>

<TextView
    android:id="@+id/settings_pass_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@id/settings_login_pane"
    android:layout_below="@id/settings_mail_value"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:text="@string/settings_pass_title"
    android:textAppearance="?android:attr/textAppearanceSmall" />

<View
    android:id="@+id/settings_intention_pane"
    android:layout_width="wrap_content"
    android:layout_height="120dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_below="@id/settings_login_pane"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:background="#eaeaea" />

<TextView
    android:id="@+id/settings_intention_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/settings_intention_pane"
    android:layout_alignTop="@+id/settings_intention_pane"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:text="@string/settings_intention_title"
    android:textAppearance="?android:attr/textAppearanceSmall" />

<Button
    android:id="@+id/settings_intention_value"
    style="@style/gray_button"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:layout_alignLeft="@+id/settings_intention_pane"
    android:layout_alignRight="@+id/settings_intention_pane"
    android:layout_below="@+id/settings_intention_title"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:onClick="intention"
    android:text="@string/intent_unspecified" />

<Button
    android:id="@+id/settings_save"
    style="@style/gray_button"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:onClick="save"
    android:text="@string/settings_save" />

<EditText
    android:id="@+id/settings_pass_value"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@id/settings_login_pane"
    android:layout_alignRight="@id/settings_login_pane"
    android:layout_below="@+id/settings_pass_title"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:ems="10"
    android:inputType="textPassword" />

</RelativeLayout>
